1.2.0 to 1.2.1
----------------------------------------------------------------------
- Made some improvements to the node page. Bug 1018. Thx Bill
- Added notification selection to top of page. Bug 1017. Thx Bill
- Added nodeid to modify asset page. Bug 785
- Added a new an improved DHCP poller. Bug 663. Thx Bill
- Added a more descriptive error message when an invalid outage ID
  is entered in the webUI. Bug 498
- Added display of ifAlias in an event or notification.  It uses the nodeid
  and the ipaddr to find it.  Use %ifalias% to see this in the event or 
  notification.  Bug 1140
- Added the ability to collect strings via SNMP and use them
  to label performance reports. Bug 1115. Thx Craig.
- Fix the opennms init script so that it works properly with chkconfig.
  Bug 1177.  Thanks Julian Gomez <JulianJose.Gomez@getronics.com>.
- Fixed the Configure SNMP Data Collection per Interface UI to be
  much faster and to handle null issnmpprimary values.
- Initialize begin and end times in isTimeInOutage so days of week is
  properly handled when passing a date that's not 'now.' Bug 1170.
- Reset TreeMap in last month top 20 outage calculations
  before accumulating outages for each service. Bug 945.
- Move the column constraints in create.sql to be at the end of table
  definitions, instead of immediately after the constrained column and
  update the installer to allow this.  Unit tests included.  Bug 1159.
- Have build.sh prefer the JRE at $JAVA_HOME/bin/java if JAVA_HOME is set.
  Bug 1154.  Thanks Chris Abernethy <opennms@obado.net>.
- Clean up the text of the <fail> tasks in build.xml so they are more clear.
  Bug 1155.  Thanks Chris Abernethy <opennms@obado.net>.
- Add Poll outage editor contributed by Craig Miskell.
- Fixed an issue with Unresponsive services being considered up
  even with unresponsiveness set to false. Bug 1151.
- Added a focus to the add interface page. Bug 1148. Thx Craig.
- Added a Linksys event to stop stupid connection traps.