@@ -34,7 +34,7 @@ output.mime=image/png
 #       has been placed last so that it looks better. Everything else
 #       should be in alphabetical order.
 
-reports=mib2.bits, mib2.discards, mib2.errors, mib2.traffic-inout, \
+reports=mib2.bits, mib2.discards, mib2.errors, mib2.packets, mib2.traffic-inout, \
 mib2printer.lifeCount, mib2printer.powerOnCount, \
 apc.load, apc.percent, apc.temp, apc.time, apc.vac, \
 checkpoint.pktsAccepted, checkpoint.pktsDropped, checkpoint.pktsLogged, checkpoint.pktsRejected, \
@@ -143,6 +143,21 @@ report.mib2.octets.command=--title="Bytes In/Out" \
  GPRINT:octOut:MIN:"Min  \\: %8.2lf %s" \
  GPRINT:octOut:MAX:"Max  \\: %8.2lf %s\\n"
  
+report.mib2.packets.name=Packets In/Out
+report.mib2.packets.columns=ifInUcastpkts,ifOutUcastpkts
+report.mib2.packets.type=interface
+report.mib2.packets.command=--title="Packets In/Out" \
+ DEF:pktsIn={rrd1}:ifInUcastpkts:AVERAGE \
+ DEF:pktsOut={rrd2}:ifOutUcastpkts:AVERAGE \
+ AREA:pktsIn#00ff00:"Packets In" \
+ GPRINT:pktsIn:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:pktsIn:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:pktsIn:MAX:"Max  \\: %8.2lf %s\\n" \
+ LINE2:pktsOut#0000ff:"Packets Out" \
+ GPRINT:pktsOut:AVERAGE:"Avg  \\: %8.2lf %s" \
+ GPRINT:pktsOut:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:pktsOut:MAX:"Max  \\: %8.2lf %s\\n"
+
 report.mib2.traffic.name=Traffic
 report.mib2.traffic.columns=ifInOctets,ifOutOctets
 report.mib2.traffic.type=interface
