@@ -1,5 +1,8 @@
 1.2.0 to 1.2.1
 ----------------------------------------------------------------------
+- Added package name to Interface page for admins. Bug 1044. Thx Bill
+- Extended the varbind matching in Notifications. Bug 1032. Thx Wiktor
+- Added mib2.packets report. Bug 1179. Thx Andy
 - Made some improvements to the node page. Bug 1018. Thx Bill
 - Added notification selection to top of page. Bug 1017. Thx Bill
 - Added nodeid to modify asset page. Bug 785
